hphp/test/zend/good/ext/exif/tests/bug62523_3.php.skipif
<?hh
extension_loaded("exif") || die("skip need exif");
