hphp/test/zend/bad/ext/curl/tests/bug64267.php.skipif
<?php
extension_loaded("curl") or die("skip need ext/curl");
?>